doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\gf\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\gf\greenfoot\lib\greenfoot.jar;D:\gf\greenfoot\lib\bluejcore.jar;D:\gf\greenfoot\lib\bluejeditor.jar;D:\gf\greenfoot\lib\bluejext2.jar;D:\gf\greenfoot\lib\junit-jupiter-5.5.2.jar;D:\gf\greenfoot\lib\junit-jupiter-api-5.5.2.jar;D:\gf\greenfoot\lib\junit-jupiter-engine-5.5.2.jar;D:\gf\greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\gf\greenfoot\lib\junit-jupiter-params-5.5.2.jar;D:\gf\greenfoot\lib\junit-platform-commons-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-console-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-engine-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-launcher-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-reporting-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-runner-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-suite-api-1.5.2.jar;D:\gf\greenfoot\lib\junit-platform-testkit-1.5.2.jar;D:\gf\greenfoot\lib\junit-quickcheck-core-0.9.jar;D:\gf\greenfoot\lib\junit-vintage-engine-5.5.2.jar;D:\gf\greenfoot\lib\hamcrest-core-1.3.jar;D:\gf\greenfoot\lib\bluej.jar;D:\gf\greenfoot\lib\classgraph-4.8.90.jar;D:\gf\greenfoot\lib\diffutils-1.2.1.jar;D:\gf\greenfoot\lib\commons-logging-api-1.1.2.jar;D:\gf\greenfoot\lib\jl1.0.1.jar;D:\gf\greenfoot\lib\opencsv-2.3.jar;D:\gf\greenfoot\lib\xom-1.3.7.jar;D:\gf\greenfoot\lib\lang-stride.jar;D:\gf\greenfoot\lib\nsmenufx-2.1.8.jar;D:\gf\greenfoot\lib\wellbehavedfx-0.3.3.jar;D:\gf\greenfoot\lib\guava-17.0.jar;D:\gf\greenfoot\lib\httpclient-4.1.1.jar;D:\gf\greenfoot\lib\httpcore-4.1.jar;D:\gf\greenfoot\lib\httpmime-4.1.1.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.base.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.controls.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.fxml.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.graphics.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.media.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.properties.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.swing.jar;D:\gf\greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\Anonymous\gamee\testing
-d
C:\Users\Anonymous\gamee\testing\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Anonymous\gamee\testing\Mobil.java
<---- end of javadoc command ---->
Loading source file C:\Users\Anonymous\gamee\testing\Mobil.java...
C:\Users\Anonymous\gamee\testing\Mobil.java:17: error: not a statement
    dd 
    ^
C:\Users\Anonymous\gamee\testing\Mobil.java:17: error: ';' expected
    dd 
      ^
C:\Users\Anonymous\gamee\testing\Mobil.java:18: error: reached end of file while parsing
}
 ^
3 errors
